chores: refactor swagger
